Fix appearance of UnderDevelopment component on mobile

--- a/src/components/ui/UnderDevelopment/UnderDevelopment.module.scss
+++ b/src/components/ui/UnderDevelopment/UnderDevelopment.module.scss
@@ -8,12 +8,17 @@
 }
 
 .illustration {
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
 }
 
 .title {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 600;
   text-align: center;
   margin-top: 30px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 2rem;
+  }
 }
